[package]
name = "messaging-relayer"
version = "0.1.0"
edition = "2021"

[lib]
name = "messaging_relayer"
path = "src/lib.rs"

[[bin]]
name = "messaging_relayer"
path = "src/main.rs"

[workspace]

[dependencies]

# Nautilus TEE — attestation, ephemeral keypair, NSM entropy
nautilus-enclave = { git = "https://github.com/Ashwin-3cS/nautilus-ops.git" }
serde_repr = "0.1"

axum = "0.7"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "1.0"
dotenvy = "0.15"
hex = "0.4"
bytes = "1.5"
http-body-util = "0.1"

sui-crypto = { version = "0.1", features = ["ed25519", "secp256k1", "secp256r1"] }
sui-sdk-types = { version = "0.1", features = ["serde", "hash"] }

# Keep blake2 for any remaining address derivation if needed
blake2 = { version = "0.10", features = ["std"] }

# New dependencies for event subscription
sui-rpc = "0.2"
bcs = "0.1"
tokio-stream = "0.1"

# CORS middleware
tower-http = { version = "0.6", features = ["cors"] }

# Walrus HTTP client for blob/quilt storage
reqwest = { version = "0.12", features = ["json", "multipart"] }

[dev-dependencies]
rand = "0.8"
rstest = "0.25"
tower = "0.5"

[features]
default = []
aws = ["nautilus-enclave/nsm"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
